--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/house_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -21,7 +21,9 @@
         <activity android:name=".TelaFiltroTipoImovel" />
         <activity android:name=".TelaFiltroComodos" />
         <activity android:name=".TelaFiltroFaixaPreco" />
-        <activity android:name=".TelaListaImovel"></activity>
+        <activity android:name=".TelaListaImovel" />
+        <activity android:name=".TelaCadastro" />
+        <activity android:name=".TelaFiltroTerrenoMetro"></activity>
     </application>
 
 </manifest>
