--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.lvbfontes.imobiliaria">
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -25,7 +25,7 @@
         <activity android:name=".TelaFiltroFaixaPreco" />
         <activity android:name=".TelaListaImovel" />
         <activity android:name=".TelaCadastro" />
-        <activity android:name=".TelaFiltroTerrenoMetro"></activity>
+        <activity android:name=".TelaFiltroArea"></activity>
     </application>
 
 </manifest>
